# omero-web-zarr

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  old_setup  pyproject.toml  setup.py
.github/workflows/: omero_plugin.yml  publish_pypi.yml
.omeroci/: app-deps
omero_web_zarr/: __init__.py  apps.py  render.py  urls.py  utils.py  views.py
omero_web_zarr/static/omero_web_zarr/: openwith.js  openwith_itkvtk.js  openwith_validator.js
omero_web_zarr/static/omero_web_zarr/vizarr/: index.8a48b24e.js  index.html
omero_web_zarr/templates/omero_web_zarr/: right_panel_vizarr.html  s3_vizarr.html
test/integration/: test_ngff.py
