
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "omero-web-zarr"
version = "0.1.2.dev0"
authors = [
  { name="The Open Microscopy Team", email="ome-devel@lists.openmicroscopy.org.uk"},
]
description = "OMERO.web plugin for OME-Zarr"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
        'Environment :: Web Environment',
        'Framework :: Django',
        'Intended Audience :: End Users/Desktop',
        'Intended Audience :: Science/Research',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: JavaScript',
        'Programming Language :: Python :: 3',
        'Topic :: Internet :: WWW/HTTP',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
        'Topic :: Internet :: WWW/HTTP :: WSGI',
        'Topic :: Scientific/Engineering :: Visualization',
        'Topic :: Software Development :: Libraries :: '
        'Application Frameworks',
        'Topic :: Text Processing :: Markup :: HTML',
]
dependencies = [
    'zarr',
]

[project.urls]
Homepage = "https://github.com/ome/omero-web-zarr"
Issues = "https://github.com/ome/omero-web-zarr/issues"

[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "ome_zarr",
]
